--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,8 @@ repositories {
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
-// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-//	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.3.RELEASE'
-
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly("org.springframework.boot:spring-boot-devtools")
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
