--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-logging.level.org.springframework = DEBUG;
+#logging.level.org.springframework = DEBUG;
+spring.data.mongodb.uri=mongodb+srv://kshitij:abcd@cluster0-3huhh.mongodb.net/test?retryWrites=true&w=majority
